checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000288215.e10aeb39c1d3567f1906ca36162c977c1b7c0672
WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#36: 
> --- linux-2.6-git.orig/arch/um/os-Linux/time.c	2008-04-25 10:42:12.000000000 -0400

CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#51: 
arch/um/os-Linux/time.c: In function ¡deliver_alarm¢:
                                     ^

CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#52: 
arch/um/os-Linux/time.c:119: error: incompatible type for argument 2 of ¡alarm_handler¢
                                                                        ^

CHECK:AVOID_EXTERNS: extern prototypes should be avoided in .h files
#70: FILE: arch/um/include/process.h:11:
+extern void sig_handler(int sig, struct sigcontext *sc);

Function prototypes don't need to be declared extern in .h
files.  It's assumed by the compiler and is unnecessary.

CHECK:AVOID_EXTERNS: extern prototypes should be avoided in .h files
#71: FILE: arch/um/include/process.h:12:
+extern void alarm_handler(int sig, struct sigcontext *sc);

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000288215.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 0 errors, 1 warnings, 4 checks, 10 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000288215.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
